meeting-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meeting-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meeting-service
  template:
    metadata:
      labels:
        app: meeting-service
    spec:
      containers:
        - name: meeting-service
          image: bookgather/meeting-service:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: meeting-service
spec:
  selector:
    app: meeting-service
  ports:
    - port: 8080
      targetPort: 8080
