mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-bookgather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-bookgather
  template:
    metadata:
      labels:
        app: mysql-bookgather
    spec:
      containers:
        - name: mysql-bookgather
          image: mysql:8.4
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-bookgather
spec:
  selector:
    app: mysql-bookgather
  ports:
    - port: 3306
      targetPort: 3306
