bookgather-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookgather-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: book-service
                port:
                  number: 8080
          - path: /clubs
            pathType: Prefix
            backend:
              service:
                name: club-service
                port:
                  number: 8080
          - path: /reviews
            pathType: Prefix
            backend:
              service:
                name: review-service
                port:
                  number: 8080
          - path: /meetings
            pathType: Prefix
            backend:
              service:
                name: meeting-service
                port:
                  number: 8080
